# EasyC

./: EasyCPrototype.py  README.md  example.c  example.ec
AlloyCTranspiler_Prototype/: AlloyCPrototype.py  README.md  example.alc  example.c
EasyCLib/: README.md
EasyCLib/include/: ec.h  ec_inline.h  ec_opaque_storage.h  ec_static_assert.h  ec_typenum.h
EasyCTranspiler_Prototype/: example.c  example.ec
EasyC_PrototypeTranspiler/: EasyCPrototype.py  README.md
IronCLib/: LICENSE  README.md
IronCLib/docs/: header_library.md  using_in_your_system.md
IronCLib/docs/premade/: global_error.h  parallel_work.h
IronCLib/include/: ic.h  ic_bounded_loop.h  ic_glue_macro.h  ic_inline.h  ic_memory.h  ic_num_cast.h  ic_opaque_storage.h  ic_result.h  ic_static_assert.h  ic_typenum.h
IronCLib/ironclib/: README.md  ic.h  ic_bounded_loop.h  ic_co_job.h  ic_concurrency.h  ic_concurrency_backend.h  ic_concurrency_signal.h  ic_glue_macro.h  ic_inline.h  ic_memory.h  ic_num_cast.h  ic_opaque_storage.h  ic_result.h  ic_static_assert.h  ic_typenum.h
IronCLib/ironhammerc/: .gitignore  CMakeLists.txt  README.md  ic_hammer.h  main.c  run_all.py  run_gcc.py
IronCLib/ironhammerc/tests/: bounded_loop_test.h  co_job_test.h  co_job_test_funcs.c  co_job_test_funcs.h  concurrency_signal_test.h  concurrency_test.h  ic_inline_test.h  inline_func.h  inline_func_wrapper_a.c  inline_func_wrapper_a.h  inline_func_wrapper_b.c  inline_func_wrapper_b.h  inline_test.h  memory_test.h  num_cast_test.h  opaque_storage_test.h  opaque_structs.c  opaque_structs.h  result_test.h  typenum_test.h
SteelCLib/: README.md
